# qalsadi

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: conf.py
qalsadi/: analex.py  analex_const.py  cache.py  cache_codernity.py  cache_factory.py  cache_pickledb.py  coder.py  custom_dictionary.py  dictword.py  disambig.py  disambig_const.py  lemmatizer.py  noun_affixer.py  print_debug.py  stem_noun.py  stem_noun_const.py  stem_pounct_const.py  stem_punct_const.py  stem_stop.py  stem_stopwords_const.py  stem_unknown.py  stem_unknown_const.py  stem_verb.py  stem_verb_const.py  stemmedaffix.py  stemmedword.py  stemnode.py  stop_affixer.py  templater.py  wordcase.py
sourcedata/dictionaries/: brokenplural.py  verb_dictionary.py
tests/: test_analex.py  test_lemmatizer.py  test_print_affixes.py  test_unit_analex.py  test_unit_cache.py  test_unit_lemmatizer.py  test_unit_tagmaker.py
tests/fixtures/: punct_dataset.py  tagcode_dataset.py
