[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qalsadi"
version = "0.0.0"
authors = [
  { name="Rashid Harvey", email="rashid.harvey@fu-berlin.de" },
]
description = "Arabic Morphological Analyzer and Lemmatizer"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "libqutrub>=1.2.3",
    "naftawayh>=0.3",
    "pyarabic>=0.6.7",
    "tashaphyne>=0.3.4.1",
    "arramooz-pysqlite>=0.4.2",
    "Arabic-Stopwords>=0.4.2",
    "alyahmor>=0.2",
    "mysam-tagmanager>=0.4"
]
